--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img src="moody-logo.png" height="250" alt="Moody Kittens">
         <div class="mt-2">
           <b class="text-center">Hello Student</b>
-          <p>This is your starter template only feel free to modify the look as you tackle the challenges that we have laid out.</p>
+          <p>This is your starter template only feel free to modify the look as you tackle the challenges that we have
+            laid out.</p>
           <small>Good Luck and Have Fun!</small>
           <br>
           <button onclick="getStarted()">Get Started</button>
@@ -40,6 +41,10 @@
       <div id="kittens" class="d-flex align-items-center flex-wrap">
       </div>
   </main>
+  <div class="card-dark d-dlex">Pkace for Kittens
+    <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4">
+
+  </div>
   <footer class="card bg-dark text-light p-2 d-flex align-items-center justify-content-center">
     <small>Created with <span style="color: var(--primary)">&hearts;</span> by CodeWorks</small>
   </footer>
