add_kittens_save

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div id="kittens" class="d-flex align-items-center flex-wrap">
       </div>
   </main>
-  <div class="card-dark d-dlex">Pkace for Kittens
-    <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4">
-
+  <div class="card-dark d-dlex space-between kitten hidden">Place for Kittens
+    <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
+    <div>testing ...</div>
   </div>
   <footer class="card bg-dark text-light p-2 d-flex align-items-center justify-content-center">
     <small>Created with <span style="color: var(--primary)">&hearts;</span> by CodeWorks</small>
