--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div id="kittens" class="d-flex align-items-center flex-wrap">
       </div>
   </main>
-  <div class="card-dark d-dlex space-between kitten hidden">Place for Kittens
+  <div id="kitten" class="card-dark d-dlex space-between hidden">Place for Kittens
     <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
     <div>testing ...</div>
   </div>
