allign_cats_space-b

--- a/index.html
+++ b/index.html
@@ -38,13 +38,11 @@
       </div>
     </div>
     <div class="p-2">
-      <div id="kittens" class="d-flex align-items-center flex-wrap">
+      <div id="kitten" class="d-flex space-between align-items-center hidden">
+        <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
+        <div>testing ...</div>
       </div>
   </main>
-  <div id="kitten" class="card-dark d-dlex space-between hidden">Place for Kittens
-    <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
-    <div>testing ...</div>
-  </div>
   <footer class="card bg-dark text-light p-2 d-flex align-items-center justify-content-center">
     <small>Created with <span style="color: var(--primary)">&hearts;</span> by CodeWorks</small>
   </footer>
