--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="p-2">
       <div id="kitten" class="d-flex space-between align-items-center hidden">
         <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
+        <button type="button" Name="test" onclick="pet()">Test</button>
         <div>testing ...</div>
       </div>
   </main>
