--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
           <small>Good Luck and Have Fun!</small>
           <br>
           <button onclick="getStarted()">Get Started</button>
+          <br>
+          <button id="clearKittens" class="danger " onclick="clearKittens()">Clear Num Kittens</button>
         </div>
       </div>
     </div>
+
     <div class="p-2">
       <div id="kitten" class="d-flex space-between align-items-center hidden">
         <img src="https://robohash.org/Pablo?set=set4" alt="https://robohash.org/set=set4"></img>
