ClearKittens button added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <small>Good Luck and Have Fun!</small>
           <br>
           <button onclick="getStarted()">Get Started</button>
-          <br>
+          <br class="ClearKittens">
           <button id="clearKittens" class="danger " onclick="clearKittens()">Clear Num Kittens</button>
         </div>
       </div>
