--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
           <small>Good Luck and Have Fun!</small>
           <br>
           <button onclick="getStarted()">Get Started</button>
-          <br class="ClearKittens">
-          <button id="clearKittens" class="danger " onclick="clearKittens()">Clear Num Kittens</button>
+          <div id="clearKittens" class="hidden">
+            <button id="clearKittensBtn" class="danger" onclick="clearKittens()">Clear Num Kittens</button>
+          </div>
         </div>
       </div>
     </div>
